results/SpecGenBench/conversational/log-CanConstruct-2023_08_26_23_24_42.txt
class CanConstruct {
    //@ requires ransomNote != null && magazine != null;
    //@ ensures \result ==> (\forall int i; 0 <= i && i < ransomNote.length(); cnt[ransomNote.charAt(i) - 'a'] >= 0);
    //@ ensures !\result ==> ransomNote.length() > magazine.length();
    public boolean canConstruct(String ransomNote, String magazine) {
        if (ransomNote.length() > magazine.length()) {
            return false;
        }
        int[] cnt = new int[26];
        //@ maintaining (\forall int i; 0 <= i && i < magazine.length(); cnt[magazine.charAt(i) - 'a'] == (\old(cnt[magazine.charAt(i) - 'a']) + 1));
        //@ decreases magazine.length() - i;
        for (char c : magazine.toCharArray()) {
            cnt[c - 'a']++;
        }
        //@ maintaining (\forall int i; 0 <= i && i < ransomNote.length(); cnt[ransomNote.charAt(i) - 'a'] == (\old(cnt[ransomNote.charAt(i) - 'a']) - 1));
        //@ maintaining (\forall int i; 0 <= i && i < ransomNote.length(); cnt[ransomNote.charAt(i) - 'a'] >= 0);
        //@ decreases ransomNote.length() - i;
        for (char c : ransomNote.toCharArray()) {
            cnt[c - 'a']--;
            if(cnt[c - 'a'] < 0) {
                return false;
            }
        }
        return true;
    }
}
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:3: error: cannot find symbol
    //@ ensures \result ==> (\forall int i; 0 <= i && i < ransomNote.length(); cnt[ransomNote.charAt(i) - 'a'] >= 0);
                                                                               ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:10: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < magazine.length(); cnt[magazine.charAt(i) - 'a'] == (\old(cnt[magazine.charAt(i) - 'a']) + 1));
                                                                                                                ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:11: error: cannot find symbol
        //@ decreases magazine.length() - i;
                                          ^
  symbol:   variable i
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:15: error: cannot find symbol
        //@ maintaining (\forall int i; 0 <= i && i < ransomNote.length(); cnt[ransomNote.charAt(i) - 'a'] == (\old(cnt[ransomNote.charAt(i) - 'a']) - 1));
                                                                                                                    ^
  symbol:   variable cnt
  location: class CanConstruct
/home/max/Documents/JMLGPT/tmp/CanConstruct.java:17: error: cannot find symbol
        //@ decreases ransomNote.length() - i;
                                            ^
  symbol:   variable i
  location: class CanConstruct
5 errors

